# ptys

./: .gitignore  Cargo.toml  LICENSE
crates/ptys-iced/: Cargo.toml
crates/ptys-network/: Cargo.toml
crates/ptys-slint/: Cargo.toml
crates/ptys-slint-components/: Cargo.toml  build.rs
crates/ptys-slint/src/: main.rs
crates/ptys_app_ffi/: Cargo.toml  build.rs
crates/ptys_app_ffi/src/: service.rs
crates/ptys_app_ffi/src/api/: network.rs
crates/ptys_common/: Cargo.toml
crates/ptys_network/: Cargo.toml
crates/ptys_packets/: Cargo.toml
crates/ptys_service/: Cargo.toml
ptys-iced/: Cargo.toml
ptys-iced/src/: main.rs
ptys-network/: Cargo.toml
ptys-network/src/: lib.rs  listener.rs  remote_stream.rs  sendable.rs
ptys-slint-components/ui/: AddListener.slint  AddListenerState.slint  ListenerList.slint  Ui.slint
ptys-slint/src/: main.rs  result_ext.rs
ptys_app/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
ptys_app/integration_test/: simple_test.dart
ptys_app/lib/: main.dart
ptys_app/linux/: CMakeLists.txt  my_application.cc
ptys_app/rust/: Cargo.toml
ptys_app/rust_builder/: pubspec.yaml
ptys_app/web/: index.html  manifest.json
ptys_app_ffi/: build.rs
ptys_gui/: Cargo.toml
ptys_network/: Cargo.toml
ptys_network/src/: channel.rs  lib.rs  listener.rs
ptys_network/src/channel/: container.rs  tcp_client.rs
ptys_network/src/listener/: container.rs  item.rs
ptys_packets/: Cargo.toml
ptys_service/: Cargo.toml
src/: app.rs  channel_events_handler.rs  listeners_events_handler.rs  main.rs  streams_events_handler.rs
(+128 files in other folders)
