[package]
name = "ptys"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.1"
eframe = "0.27.1"
tokio = { version = "1.37.0", features = ["time", "rt", "rt-multi-thread", "sync", "fs", "io-util", "net", "macros"] }
tokio-util = "0.7.10"
anyhow = "1.0.81"
strum = "0.26.2"
strum_macros = "0.26.2"
