[package]
name = "ptys-slint"
version = "0.1.0"
edition = "2021"

[dependencies]
ptys-slint-components = { path = "../ptys-slint-components" }
ptys-network = { path = "../ptys-network" }
eyre = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "sync", "rt", "rt-multi-thread"] }
slint = { workspace = true }
