[package]
name = "rust_lib_ptys_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ptys_service = { path = "../ptys_service" }
ptys_network = { path = "../ptys_network" }
eyre = { workspace = true }
tokio = { workspace = true }
flutter_rust_bridge = "=2.7.0"

[build-dependencies]
anyhow = "1.0.95"
flutter_rust_bridge_codegen = "=2.7.0"
